DMP-3051 updated /transcription-workflows endpoint to return migrated comments